2004-09-20  Peter Moulder  <pmoulder@bowman.csse.monash.edu.au>

	* src/Makefile.am (EXTRA_DIST), Makefile_insert
	  dialogs/Makefile_insert extension/implementation/Makefile_insert
	  extension/internal/Makefile_insert helper/Makefile_insert
	  livarot/Makefile_insert (blah_SOURCES):
	  Add some .h files for `make dist'.

2004-09-19  MenTaLguY <mental@rydia.net>

	* src/gc-core.h: don't defer finalizers

	* src/gc-core.h: bump up free space divisor -- collections should
	  happen ~32x more frequently

2004-09-18  MenTaLguY <mental@rydia.net>

	* src/dialogs/filedialog.cpp: unref the preview document we created

2004-09-18  Carl Hetherington <inkscape@carlh.net>

	* src/livarot/AVL.cpp, src/livarot/AVL.h,
	src/livarot/DblLinked.cpp, src/livarot/DblLinked.h,
	src/livarot/LivarotDefs.h, src/livarot/ShapeRaster.cpp,
	src/livarot/ShapeSweep.cpp, src/livarot/sweep-tree.cpp: replace
	leftFoo and rightFoo with foo[2] in a few places.

2004-09-17  Carl Hetherington <inkscape@carlh.net>

	* src/livarot/Shape.h: use a std::vector for Shape::chgts.  Add
	clearIncidenceData();

	* src/livarot/Shape.cpp: Add clearIncidenceData().  Initialise
	iData in the constructor.

	* src/livarot/ShapeSweep.cpp: coding style cleanups.  Use a
	std::vector for Shape::chgts.  Use clearIncidenceData().

2004-09-16  Carl Hetherington <inkscape@carlh.net>

	* src/livarot/ShapeUtils.h, src/livarot/ShapeSweepUtils.cpp,
	src/livarot/sweep-tree.cpp, src/livarot/sweep-tree.h,
	src/livarot/sweep-event.cpp, src/livarot/sweep-event.h,
	src/livarot/Shape.h: split up ShapeUtils.h and ShapeSweepUtils.cpp
	into two separate files.

	* src/livarot/Shape.cpp, src/livarot/Shape.h,
	src/livarot/ShapeRaster.cpp, src/livarot/ShapeSweep.cpp,
	src/livarot/sweep-event.cpp, src/livarot/sweep-event.h:
	Make SweepEventQueue into a proper class, and move some static
	methods from SweepEvent into it.

	* src/livarot/ShapeSweep.cpp, src/livarot/sweep-event.cpp,