@@ -1,3 +1,10 @@
+#ifndef SEEN_LIBNR_NR_MATRIX_SCALE_OPS_H
+#define SEEN_LIBNR_NR_MATRIX_SCALE_OPS_H
 /** \file Declarations (and definition if inline) of operator blah (NR::Matrix, NR::scale). */
 
 #include "libnr/nr-matrix-ops.h"
+
+NR::Matrix operator/(NR::Matrix const &m, NR::scale const &s);
+
+
+#endif /* !SEEN_LIBNR_NR_MATRIX_SCALE_OPS_H */
